plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.jetbrains.kotlin.jvm'
	id "org.asciidoctor.jvm.convert" version "3.3.2"
}

group = 'kr.co'
version = '0.0.1-SNAPSHOT'

java {
	compileJava {
		options.compilerArgs << '-parameters'
	}
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

allprojects {
	repositories {
		mavenCentral()
	}
}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}


kotlin {
	jvmToolchain(21)
}

bootJar {
	enabled = false
}
jar {
	enabled = true
}


